# CFBox

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.en.md  README.md  ROADMAP.md  Roadmap.md
.github/workflows/: ci.yml
changelogs/: v0.1.0.md  v0.2.0.md  v0.3.0.md
cmake/: Config.cmake
cmake/compile/: CompilerFlag.cmake
cmake/toolchain/: Toolchain-aarch64.cmake  Toolchain-armhf.cmake
configs/: qemu-inittab  qemu-virt-aarch64.config
document/: architecture.md  ci.md  cross-compilation.md  promo-v0.3.0.zh.md  qemu-testing.md
document/ai/: CODING-TASTE.md  COVERAGE.md  DIRECTIVES.md  PERFORMANCE.md  PLAN.md  ROADMAP.md  STRUCTURE-TASTE.md  prompts.md
document/notes/: 2026-06-17-ai-infra-migration.md  2026-06-17-tail-follow.md  2026-06-28-cp-archive.md  2026-06-28-find-boolean.md  2026-06-28-grep-context.md  2026-06-28-ls-recursive-color.md  2026-06-28-sh-deepen-mid.md  2026-06-28-sh-deepen-p1.md  2026-06-28-sh-deepen-trap.md  2026-06-28-test-posix.md  README.md
document/todo/: README.md  compatibility-policy.md  documentation-site.md  production-roadmap.md  v1-production-criteria.md
document/todo/phases/: phase-0a-baseline-inventory.md  phase-0b-performance-resource-baseline.md  phase-0c-size-profile-budget.md  phase-0d-io-streaming-policy.md  phase-0e-safety-robustness-hardening.md  phase-0f-ci-repro-debuggability.md  phase-1-core-system.md  phase-1.5-code-quality-review.md  phase-2-network.md  phase-3-quality.md  phase-4-multiuser.md  phase-5-longtail.md
include/cfbox/: applet.hpp  applet_config.hpp  applet_config.hpp.in  applets.hpp  args.hpp  checksum.hpp  compress.hpp  deflate.hpp  error.hpp  escape.hpp  fs_util.hpp  help.hpp  inflate.hpp  io.hpp  proc.hpp  regex.hpp  stream.hpp  term.hpp  terminal.hpp  tui.hpp  utf8.hpp
projects/: README.md
scripts/: build_initramfs.sh  build_initramfs_inittab.sh  gen_links.sh  gen_size_table.sh  measure_size.sh  qemu_system_test.sh  qemu_user_test.sh
src/: main.cpp
src/applets/: ar.cpp  basename.cpp  cal.cpp  cat.cpp  chgrp.cpp  chmod.cpp  chown.cpp  cksum.cpp  clear.cpp  cmp.cpp  comm.cpp  cp.cpp  cpio.cpp  cut.cpp  date.cpp  df.cpp  diff.cpp  dirname.cpp  dmesg.cpp  du.cpp  echo.cpp  ed.cpp  env.cpp  expand.cpp  expr.cpp  factor.cpp  false.cpp  find.cpp  fold.cpp  free.cpp  fuser.cpp  grep.cpp  gunzip.cpp  gzip.cpp  head.cpp  hexdump.cpp  hostid.cpp  hostname.cpp  id.cpp  init.cpp  (+77 more)
src/applets/awk/: awk.hpp  awk_executor.cpp  awk_lexer.cpp  awk_main.cpp  awk_parser.cpp
src/applets/init/: init.hpp  init_inittab.cpp  init_main.cpp  init_runlevel.cpp  init_shutdown.cpp  init_spawn.cpp
src/applets/sh/: sh.hpp  sh_builtins.cpp  sh_executor.cpp  sh_expand.cpp  sh_lexer.cpp  sh_main.cpp  sh_parser.cpp  sh_vars.cpp
src/applets/top/: top.hpp  top_main.cpp
tests/: check_structure_gates.sh  check_test_floor.sh  expected_counts.txt  untested_applets.txt
tests/benchmark/: bench_io_lines.cpp  bench_sed.cpp  bench_sort.cpp  run_bench_e2e.sh
tests/differential/: README.md  known_diffs  run_diff_smoke.sh
tests/integration/: helpers.sh  run_all.sh  test_awk.sh  test_basename.sh  test_cat.sh  test_cksum.sh  test_cmp.sh  test_cp.sh  test_cut.sh  test_date.sh  test_diff.sh  test_dirname.sh  test_echo.sh  test_expr.sh  test_factor.sh  test_false.sh  test_find.sh  test_grep.sh  test_gzip.sh  test_head.sh  test_help.sh  test_hostname.sh  test_id.sh  test_link.sh  test_ln.sh  test_logname.sh  test_ls.sh  test_md5sum.sh  test_mkdir.sh  test_mktemp.sh  test_mv.sh  test_nl.sh  test_nproc.sh  test_od.sh  test_printenv.sh  test_printf.sh  test_pwd.sh  test_rm.sh  test_sed.sh  test_seq.sh  (+16 more)
tests/unit/: test_applet.cpp  test_args.cpp  test_awk.cpp  test_basename.cpp  test_cal.cpp  test_capture.hpp  test_cat.cpp  test_chgrp.cpp  test_chmod.cpp  test_chown.cpp  test_cksum.cpp  test_clear.cpp  test_cmp.cpp  test_comm.cpp  test_compress.cpp  test_cp.cpp  test_cut.cpp  test_date.cpp  test_diff.cpp  test_dirname.cpp  test_dmesg.cpp  test_du.cpp  test_echo.cpp  test_error.cpp  test_escape.cpp  test_expr.cpp  test_factor.cpp  test_false.cpp  test_find.cpp  test_free.cpp  test_fuser.cpp  test_grep.cpp  test_gzip.cpp  test_head.cpp  test_help.cpp  test_hexdump.cpp  test_hostid.cpp  test_hostname.cpp  test_id.cpp  test_init_inittab.cpp  (+59 more)
